Ruben's info added

--- a/index.html
+++ b/index.html
@@ -255,6 +255,20 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="span4">
+                   
+                </div>
+                <div class="span4 flyIn">
+                    <div class="people">
+                        <img class="team-thumb img-circle" src="img/team/img-7.jpg" alt="" />
+                        <h3>Ruben Bliss</h3>
+                    </div>
+                </div>
+                <div class="span4">
+                    
+                </div>
+            </div>
         </div>
         <!-- /.container -->
     </section>
