--- a/index.html
+++ b/index.html
@@ -2,125 +2,89 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<title>Reachout - Big Data Big Heart</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<link href="css/bootstrap-responsive.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
-	<link href="color/default.css" rel="stylesheet">
-	<link rel="shortcut icon" href="img/favicon.ico">
+    <meta charset="utf-8">
+    <title>Reachout - Big Data Big Heart</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="color/default.css" rel="stylesheet">
+    <link rel="shortcut icon" href="img/favicon.ico">
 
 </head>
 
 <body>
-	<!-- navbar -->
-	<div class="navbar-wrapper">
-		<div class="navbar navbar-inverse navbar-fixed-top">
-			<div class="navbar-inner">
-				<div class="container">
-					<!-- Responsive navbar -->
-					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</a>
-					<h1 class="brand"><a href="index.html">Guru</a></h1>
-					<!-- navigation -->
-					<nav class="pull-right nav-collapse collapse">
-						<ul id="menu-main" class="nav">
-							<li><a title="intro" href="#intro">Introduction</a></li>
-							<li><a title="problem" href="#problem">Problem</a></li>
-							<li><a title="solution" href="#solution">Solution</a></li>
-							<li><a title="prototype" href="#prototype">Prototype</a></li>
-                            <!--<li><a title="future" href="#future">Future Plan</a></li>-->
-                            <li><a title="team" href="#team">Team</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Header area -->
-	<div id="header-wrapper" class="header-slider">
-		<header class="clearfix">
-			<div class="logo">
-				<img src="img/logo-image.png" alt="" />
-			</div>
-			<div class="container">
-				<div class="row">
-					<div class="span12">
-						<div id="main-flexslider" class="flexslider">
-							<ul class="slides">
-								<li>
-									<p class="home-slide-content">
-                                        Epilepsy <strong>Guru</strong>
-									</p>
-								</li>
-								<li>
-									<p class="home-slide-content">
-										Available <strong>24/7</strong>
-									</p>
-								</li>
-								<li>
-									<p class="home-slide-content">
-										Answer your <strong>queries</strong>
-									</p>
-								</li>
-							</ul>
-						</div>
-						<!-- end slider -->
-					</div>
-				</div>
-			</div>
-		</header>
-	</div>
-	<!-- spacer section -->
-	<section class="spacer green">
-		<div class="container">
-			<div class="row">
-				<div class="span6 alignright flyLeft">
-					<blockquote class="large">
-                        Constantly working to increase community awareness of epilepsy <cite>Guru - The bot, for Epilepsy Queensland</cite>
-					</blockquote>
-				</div>
-				<div class="span6 aligncenter flyRight">
-					<i class="icon-coffee icon-10x"></i>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- end spacer section -->
+    <!-- Header area -->
+    <div id="header-wrapper" class="header-slider">
+        <header class="clearfix">
+            <div class="logo">
+                <img src="img/logo-image.png" alt="" />
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="span12">
+                        <div id="main-flexslider" class="flexslider">
+                            <ul class="slides">
+                                <li>
+                                    <p class="home-slide-content">
+                                        Epilepsy <strong>Jenny</strong>
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="home-slide-content">
+                                        Available <strong>24/7</strong>
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="home-slide-content">
+                                        Answer your <strong>queries</strong>
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- end slider -->
+                    </div>
+                </div>
+            </div>
+        </header>
+    </div>
+    <!-- spacer section -->
+    <section class="spacer orange">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-md-offset-1">
+                    <div class="span6 alignright">
+                        <blockquote class="large">
+                            Constantly working to increase community awareness of epilepsy <cite>Jenny - The bot, for Epilepsy Queensland</cite>
+                        </blockquote>
+                    </div>
+                </div><div class="col-md-5">
+                    <div class="span6 aligncenter">
+                        <i class="icon-coffee icon-10x"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end spacer section -->
     <!-- section: intro -->
     <section id="intro" class="section">
         <div class="container">
             <h4>Introduction</h4>
             <div class="row">
-                <div class="span12">
-                    <div>
-                        <h2>Comforting people in need <strong>when they need it</strong></h2>
-                        <p>
-                            Guru is a first point of access to people who need guidance and have little or no experience with epilepsy. It creates a personalised experience to assist with information that is specific to them, and directs follow up questions to the health professional when needed.
-                        </p>
-                    </div>
+                <div class="col-md-10 col-md-offset-1">
+                <div>
+                    <h2>Comforting people in need <strong>when they need it</strong>
+                    </h2>
+                    <p>
+                        Jenny is a first point of access to people who need guidance and have little or no experience with epilepsy. It creates a personalised experience to assist with information that is specific to them, and directs follow up questions to the health professional when needed.
+                    </p>
                 </div>
+            </div>
             </div>
         </div>
         <!-- /.container -->
-    </section>
-    <!-- end section: intro -->
-    <!-- spacer section -->
-    <section class="spacer bg3">
-        <div class="container">
-            <div class="row">
-                <div class="span12 aligncenter flyLeft">
-                    <blockquote class="large">
-                        What problem are we solving?
-                    </blockquote>
-                </div>
-                <div class="span12 aligncenter flyRight">
-                    <i class="icon-rocket icon-10x"></i>
-                </div>
-            </div>
-        </div>
     </section>
     <!-- end spacer section -->
     <!-- section: problem -->
@@ -146,26 +110,31 @@
     </section>
     <!-- end section: problem -->
     <!-- section: solution -->
-    <section id="solution" class="section green">
+    <section id="solution" class="section orange">
         <div class="container">
-            <h4>Our solution</h4>
-            <p>
-                We believe that using the educational material provided by Epilepsy Queensland and Dialogflow’s conversational service, we can create a chat experience to offer an instant helping hand to those experienceing seizures or a potential diagnosis of epilepsy.
+            <div class="col-md-8 col-md-offset-2">
+                <h4>Our solution</h4>
+                <p>
+                    We believe that using the educational material provided by Epilepsy Queensland and Dialogflow’s conversational service, we can create a chat experience to offer an instant helping hand to those experienceing seizures or a potential diagnosis of epilepsy.
 
-                As the solution can be distributed over several platforms such as a website, Facebook page or a talking humanoid robot, we can open up the funnel and help more people connect with Epilepsy Queensland.
+                    As the solution can be distributed over several platforms such as a website, Facebook page or a talking humanoid robot, we can open up the funnel and help more people connect with Epilepsy Queensland.
 
-            </p>
-   
+                </p>
+            </div>
+
         </div>
     </section>
     <!-- end section: solution -->
     <!-- section: prototype -->
     <section id="prototype" class="section">
         <div class="container">
-            <h4>Say "hi" to Guru</h4>
             <div class="row">
-                <div class="span12">
-                    <div class="aligncenter" style="height:430px;">
+                <div class="col-md-6">
+                    <h4 style="text-align: left !important;">Say "hi" to Jenny</h4>
+                    Reprehenderit tempora placeat qui libero voluptatem. Vel consectetur est voluptatibus dolore quod. Sunt quo inventore occaecati. Totam corporis corporis ut est sint quidem odio dolores. Ducimus in molestiae non iusto. Cum quo aut et iure nesciunt.…
+                </div>
+                <div class="col-md-6">
+                    <div class="aligncenter" style="height: 430px;">
                         <iframe width="350" height="430" src="https://console.dialogflow.com/api-client/demo/embedded/brisbanereachout"></iframe>
                     </div>
                 </div>
@@ -174,61 +143,25 @@
         <!-- /.container -->
     </section>
     <!-- end section: prototype -->
-    <!-- section: future -->
-    <section id="future" class="section orange">
-        <div class="container">
-            <h4>Future Plans</h4>            
-            <!-- Four columns -->
-            <div class="row">
-                <div class="span4 animated flyIn aligncenter">
-                    <div class="service-box">
-                        <img src="img/icons/Robot.png" alt="" />
-                        <h2>Robots</h2>
-                        <p>
-                            Integrate with Interactive Robots to educating Kids.
-                        </p>
-                    </div>
-                </div>
-                <div class="span4 animated flyIn aligncenter">
-                    <div class="service-box">
-                        <img src="img/icons/lab.png" alt="" />
-                        <h2>Mechine Learning</h2>
-                        <p>
-                            Improve the knowledgebase.
-                        </p>
-                    </div>
-                </div>
-                <div class="span4 animated flyIn aligncenter">
-                    <div class="service-box">
-                        <img src="img/icons/laptop.png" alt="" />
-                        <h2>Other Organisations</h2>
-                        <p>
-                            Extend this service to other similar Organisations.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- end section: future -->    
+    <!-- end section: future -->
     <!-- section: team -->
     <section id="team" class="section">
         <div class="container">
             <h4>Team Reachout</h4>
             <div class="row">
-                <div class="span4 flyIn">
+                <div class="col-md-4  flyIn">
                     <div class="people">
                         <img class="team-thumb img-circle" src="img/team/img-1.jpg" alt="" />
                         <h3>Sean Harrison</h3>
                     </div>
                 </div>
-                <div class="span4 flyIn">
+                <div class="col-md-4  flyIn">
                     <div class="people">
                         <img class="team-thumb img-circle" src="img/team/img-2.jpg" alt="" />
                         <h3>Sandra Arato</h3>
                     </div>
                 </div>
-                <div class="span4 flyIn">
+                <div class="col-md-4  flyIn">
                     <div class="people">
                         <img class="team-thumb img-circle" src="img/team/img-3.jpg" alt="" />
                         <h3>Peter Arato</h3>
@@ -236,19 +169,19 @@
                 </div>
             </div>
             <div class="row">
-                <div class="span4 flyIn">
+                <div class="col-md-4  flyIn">
                     <div class="people">
                         <img class="team-thumb img-circle" src="img/team/img-4.jpg" alt="" />
                         <h3>Liam Daly Manocchio</h3>
                     </div>
                 </div>
-                <div class="span4 flyIn">
+                <div class="col-md-4  flyIn">
                     <div class="people">
                         <img class="team-thumb img-circle" src="img/team/img-5.jpg" alt="" />
                         <h3>Bibin Markose Ninan</h3>
                     </div>
                 </div>
-                <div class="span4 flyIn">
+                <div class="col-md-4  flyIn">
                     <div class="people">
                         <img class="team-thumb img-circle" src="img/team/img-6.jpg" alt="" />
                         <h3>Joshua Daly Manocchio</h3>
@@ -256,17 +189,17 @@
                 </div>
             </div>
             <div class="row">
-                <div class="span4">
-                   
+                <div class="col-md-4 ">
+
                 </div>
-                <div class="span4 flyIn">
+                <div class="col-md-4  flyIn">
                     <div class="people">
                         <img class="team-thumb img-circle" src="img/team/img-7.jpg" alt="" />
                         <h3>Ruben Bliss</h3>
                     </div>
                 </div>
-                <div class="span4">
-                    
+                <div class="col-md-4 ">
+
                 </div>
             </div>
         </div>
@@ -274,37 +207,37 @@
     </section>
     <!-- end section: team -->
 
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="span6 offset3">
-					<!--<ul class="social-networks">
-						<li><a href="#"><i class="icon-circled icon-bgdark icon-instagram icon-2x"></i></a></li>
-						<li><a href="#"><i class="icon-circled icon-bgdark icon-twitter icon-2x"></i></a></li>
-						<li><a href="#"><i class="icon-circled icon-bgdark icon-dribbble icon-2x"></i></a></li>
-						<li><a href="#"><i class="icon-circled icon-bgdark icon-pinterest icon-2x"></i></a></li>
-					</ul>-->
-					<p class="copyright">
-						&copy; Reachout Team - Big Data Big Heart 2017. All rights reserved.
-					</p>
-				</div>
-			</div>
-		</div>
-		<!-- ./container -->
-	</footer>
-	<a href="#" class="scrollup"><i class="icon-angle-up icon-square icon-bgdark icon-2x"></i></a>
-	<script src="js/jquery.js"></script>
-	<script src="js/jquery.scrollTo.js"></script>
-	<script src="js/jquery.nav.js"></script>
-	<script src="js/jquery.localScroll.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<script src="js/jquery.prettyPhoto.js"></script>
-	<script src="js/isotope.js"></script>
-	<script src="js/jquery.flexslider.js"></script>
-	<script src="js/inview.js"></script>
-	<script src="js/animate.js"></script>
-	<script src="js/custom.js"></script>
-	<script src="contactform/contactform.js"></script>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="span6 offset3">
+                    <!--<ul class="social-networks">
+                        <li><a href="#"><i class="icon-circled icon-bgdark icon-instagram icon-2x"></i></a></li>
+                        <li><a href="#"><i class="icon-circled icon-bgdark icon-twitter icon-2x"></i></a></li>
+                        <li><a href="#"><i class="icon-circled icon-bgdark icon-dribbble icon-2x"></i></a></li>
+                        <li><a href="#"><i class="icon-circled icon-bgdark icon-pinterest icon-2x"></i></a></li>
+                    </ul>-->
+                    <p class="copyright">
+                        &copy; Reachout Team - Big Data Big Heart 2017. All rights reserved.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- ./container -->
+    </footer>
+    <a href="#" class="scrollup"><i class="icon-angle-up icon-square icon-bgdark icon-2x"></i></a>
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery.scrollTo.js"></script>
+    <script src="js/jquery.nav.js"></script>
+    <script src="js/jquery.localScroll.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/jquery.prettyPhoto.js"></script>
+    <script src="js/isotope.js"></script>
+    <script src="js/jquery.flexslider.js"></script>
+    <script src="js/inview.js"></script>
+    <script src="js/animate.js"></script>
+    <script src="js/custom.js"></script>
+    <script src="contactform/contactform.js"></script>
 
 </body>
 
