--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h4 style="text-align: left !important;">Say "hi" to Jenny</h4>
-                    Reprehenderit tempora placeat qui libero voluptatem. Vel consectetur est voluptatibus dolore quod. Sunt quo inventore occaecati. Totam corporis corporis ut est sint quidem odio dolores. Ducimus in molestiae non iusto. Cum quo aut et iure nesciunt.…
+                    Jenny is a chatbot that aims to assist users in discovering more about epilepsy. You can ask Jenny many things, such as what epilepsy is or what to do if you think you or a loved one has epilepsy, as well as information on particular seizure types. Give it a try on the right.
                 </div>
                 <div class="col-md-6">
                     <div class="aligncenter" style="height: 430px;">
