Readjusted title page

--- a/index.html
+++ b/index.html
@@ -16,38 +16,18 @@
 
 <body>
     <!-- Header area -->
-    <div id="header-wrapper" class="header-slider">
-        <header class="clearfix">
-            <div class="logo">
-                <img src="img/logo-image.png" alt="" />
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="span12">
-                        <div id="main-flexslider" class="flexslider">
-                            <ul class="slides">
-                                <li>
-                                    <p class="home-slide-content">
-                                        Epilepsy <strong>Jenny</strong>
-                                    </p>
-                                </li>
-                                <li>
-                                    <p class="home-slide-content">
-                                        Available <strong>24/7</strong>
-                                    </p>
-                                </li>
-                                <li>
-                                    <p class="home-slide-content">
-                                        Answer your <strong>queries</strong>
-                                    </p>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- end slider -->
-                    </div>
+    <div id="header-wrapper" style="background: #f8f8f8 !important;" class="header-slider">
+        <div class="col-md-6 text-center">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h2 style="color: black;">Meet Jenny</h2>
+                    Excepturi id asperiores voluptatem porro. Sit qui et rerum esse corporis. Velit labore omnis soluta non minus. Earum nesciunt consequatur nostrum ipsa qui. Expedita enim ratione et. Qui nobis ullam sunt.
                 </div>
             </div>
-        </header>
+        </div>
+        <div class="col-md-6">
+            <img src="./img/jenny.png" class="img-responsive"/>
+        </div>
     </div>
     <!-- spacer section -->
     <section class="spacer orange">
