--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
         background: rgba(248, 248, 248, .4);
         border-radius: 10px;
     }
+
+    #prototype h5 {
+        margin: 50px auto 25px auto;
+        text-transform: uppercase;
+        font-size: 16px;
+    }
+    #prototype ul {
+        margin: 0 0 25px 25px;
+    }
+    #prototype ul li {
+        font-size: 14px;
+        list-style-type: square;
+        margin: 10px 0;
+    }
     </style>
 </head>
 
@@ -114,6 +128,13 @@
                     <p>
                         Jenny is a chatbot that aims to assist users in discovering more about epilepsy. You can ask Jenny many things, such as what epilepsy is or what to do if you think you or a loved one has epilepsy, as well as information on particular seizure types. Give it a try on the right.
                     </p>
+
+                    <h5>Start a conversation with `Hello`<br/>or you can ask questions like:</h5>
+                    <ul>
+                        <li>What is epilepsy?</li>
+                        <li>How epilepsy is diagnosed?</li>
+                        <li>Who gets epilepsy?</li>
+                    </ul>
                 </div>
                 <div class="col-md-6">
                     <div class="aligncenter" style="height: 430px;">
