--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h1>Meet Jenny</h1>
-                    <h2 style="color: black;text-shadow: none;line-height: 1.5em;">Comforting people in need <strong>when they need it</strong>
-                    </h2>
+                    <h2 style="color: black;text-shadow: none;line-height: 1.5em;">Comforting people in need <strong>when they need it</strong></h2>
                     <p>
                         Jenny is a first point of access to people who need guidance and have little or no experience with epilepsy. It creates a personalised experience to assist with information that is specific to them, and directs follow up questions to the health professional when needed.
                     </p>
@@ -124,7 +123,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h4 style="text-align: left !important;">Say "hi" to Jenny</h4>
+                    <h4 style="text-align: left !important;">Say Hi to Jenny</h4>
                     <p>
                         Jenny is a chatbot that aims to assist users in discovering more about epilepsy. You can ask Jenny many things, such as what epilepsy is or what to do if you think you or a loved one has epilepsy, as well as information on particular seizure types. Give it a try on the right.
                     </p>
