--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         margin-top: 0;
         padding-top: 0;
     }
+    #header-wrapper h2 {
+        font-size: 1.8em;
+    }
     #header-wrapper img {
         border: 1px solid #d5d5d5;
         background: rgba(248, 248, 248, .4);
